css/styles.css
/*major sections not body - whole page, header and footer
*/
* {
  text-decoration: none;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: #1a237e;
  font-family: "Heebo", sans-serif;
  letter-spacing: 1px;
  text-align: center;
  border: 0;
}
.search {
  display: flex;
  width: 100vw;
  height: 100vh;
  flex-direction: column;
  justify-content: space-evenly;
}

header {
  background-color: #1a237e;
  height: 12vh;

  border-bottom: 2px #1a237e solid;
  text-align: center;
}
h1 {
  font-family: "Heebo", sans-serif;
  color: #fafbff;
  padding-top: 2px;
  font-size: 2em;
  border-top: 1em;
}
/*dropdown*/
h2 {
  font-family: "Heebo", sans-serif;
  color: hsl(228, 100%, 99%);
  border-top: 5px;
  font-size: 1.5em;
  padding-top: 5px;
  padding-bottom: 5px;
}
a {
  font-family: "Heebo", sans-serif;
  color: #fafbff;
  font-size: 1em;
  text-transform: uppercase;
  font-weight: thin;
  letter-spacing: 1px;
  border-top: 0 solid transparent;
  border-bottom: 0 solid transparent;
  padding-bottom: 0;
  position: relative;
  /* display: inline-block; */
  background-color: #1a237e;
  vertical-align: text-bottom;
}
a:hover {
  color: #01bfa5;
}
.dropdown-content {
  display: none;

  min-width: 200px;
  z-index: 1;
}

.dropdown-content a {
  font-size: 1em;
  border: #01bfa5;
  background-color: #1a237e;
  padding: 1px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
  background-color: #1a237e;
  color: #01bfa5;
}

.dropdown {
  display: block;
  background-color: #1a237e;
}
.dropdown:hover .dropdown-content {
  display: block;
  background-color: #01bfa5;
}

/*main body */
main {
  background-color: #fafbff;
}

/*results*/

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(720deg);
  }
}

.btn {
  display: none;
}

.pagingBtns {
  flex: 1;
  max-height: 5vh;
  width: auto;
  height: auto;
}
.article-icon {
  flex: 1;
  display: flex;
  flex-direction: column;
  color: #3d5afe;
  box-sizing: border-box;
  padding: 8px;
  font-size: 16px;
  border: none;
  overflow: auto;
  position: relative;
  align-items: center;
  width: auto;
}
.results {
  flex: 1;
  display: flex;
  flex-direction: column;
  color: #3d5afe;
  box-sizing: border-box;
  padding: 2em;
  font-size: 16px;
  border: none;
  overflow: auto;
  position: relative;
  align-items: center;
  justify-content: center;
}
.container {
  padding: 4px;
  border: 4px;
}
.author {
  color: #01bfa5;
}
.title {
  color: #1a237e;
  font-weight: bold;
}
.journal {
  font-style: italic;
  color: #3d5afe;
}

.pubdate {
  font-style: italic;
  color: #01bfa5;
  font-style: normal;
}
.clickable {
  background-color: #fafbff;
  list-style: none;
}

/*animation*/
.waitingcontainer {
  background-color: #fafbff;

  transform: translate(-50%, -50%);
  /* padding: 10px 30px; */
  margin-top: 20px;
  margin-left: 10px;
  border-radius: 50%;
  z-index: 2;
}

.waitingicon {
  display: inline-block;
  border: 10px solid #fafbff;
  width: 40%;
  height: 40%;
  border-radius: 50%;
  border-top-color: #01bfa5;
  border-left-color: #01bfa5;
  animation: spin 2s infinite ease-in-out;
  z-index: 2;
}

/*carousel*/
.carousel {
  max-width: auto;
  align-items: center;
  justify-content: center;
  display: flex;
  padding: 4px;
}
.carousel-images {
  width: 40vw;
  height: auto;
  background: #01bfa5;
  padding: 1px;
  border-radius: 10px;
  box-sizing: border-box;
  box-shadow: 2px 2px #24a997;
  align-items: center;
  justify-content: center;
}

.carousel-images img {
  display: none;
  width: 100%;
  border-radius: 10px;
}

.carousel-images img:first-of-type {
  display: block;
}
.carousel-button {
  align-self: center;
  background: #ff3f81;
  padding: 10px;
  border-radius: 50%;
  text-align: center;
  box-shadow: 1px 1px#ff3f81;
  margin: 10px;
}
.carousel-button:hover {
  cursor: pointer;
  background: #ff3f81;
  box-shadow: 1px 1px#ff3f81;
  color: white;
}

